Added Attributions and Title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Globe Render</title>
+<title>Teaspoon Graph</title>
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,16 +12,16 @@
   html, body {
     margin: 0;
     height: 100%;
-    display: flex;
-    justify-content: right;  
-    align-items: center;      
     background: #FFFFFF; 
-    font-family: 'Varela Round', sans-serif;        
+    font-family: 'Varela Round', sans-serif;
   }
 
   canvas {
+    position: absolute;
     width: 600px;   
     height: 600px;
+    right: 72px;
+    top: calc(50vh - 300px);
   }
 	
 </style>
