added new scripts

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 <canvas id="glcanvas"></canvas>
 <script defer src="Globe.js"></script>
 <script defer src="Lesson.js"></script>
+<script defer src="Blocks.js"></script>
+<script defer src="Execution.js"></script>
 <script defer src="Master.js"></script>
 </body>
 </html>
