--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 
 <style>
   html, body {
     margin: 0;
     height: 100%;
     background: #FFFFFF; 
-    font-family: 'Varela Round', sans-serif;
+    font-family: 'Roboto Mono', sans-serif;
   }
 
   canvas {
