--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     height: 100%;
     background: #FFFFFF; 
     font-family: 'Roboto Mono', sans-serif;
+    overflow: hidden;
   }
 
   canvas {
